WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105897
[WK2] plugins/clicking-missing-plugin-fires-delegate.html is failing
https://bugs.webkit.org/show_bug.cgi?id=105897
Summary
[WK2] plugins/clicking-missing-plugin-fires-delegate.html is failing
Chris Dumez
Reported
2013-01-01 06:06:48 PST
plugins/clicking-missing-plugin-fires-delegate.html is failing on WK2 due to missing WebKitTestRunner dumping: diff: - MISSING PLUGIN BUTTON PRESSED
Attachments
Patch
(5.38 KB, patch)
2013-01-01 06:10 PST
,
Chris Dumez
ap
: review+
Details
Formatted Diff
Diff
Patch for landing
(5.30 KB, patch)
2013-01-01 22:37 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-01-01 06:10:48 PST
Created
attachment 180990
[details]
Patch
Alexey Proskuryakov
Comment 2
2013-01-01 20:45:03 PST
Comment on
attachment 180990
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=180990&action=review
> Tools/WebKitTestRunner/TestController.cpp:1112 > +void TestController::unavailablePluginButtonClicked(WKPageRef, WKPluginUnavailabilityReason, WKStringRef /*mimeType*/, WKStringRef /*url*/, WKStringRef /*pluginsPageURL*/, const void*)
I would leave arguments names completely, not just comment them out. They are not even present in header.
Chris Dumez
Comment 3
2013-01-01 22:37:42 PST
Created
attachment 181009
[details]
Patch for landing Removed commented argument names.
WebKit Review Bot
Comment 4
2013-01-01 22:54:43 PST
Comment on
attachment 181009
[details]
Patch for landing Clearing flags on attachment: 181009 Committed
r138608
: <
http://trac.webkit.org/changeset/138608
>
WebKit Review Bot
Comment 5
2013-01-01 22:54:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug