[WK2] plugins/clicking-missing-plugin-fires-delegate.html is failing https://bugs.webkit.org/show_bug.cgi?id=105897

Reviewed by Alexey Proskuryakov.

Tools:

Dump in WebKitTestRunner the message that is expected by layout tests
when the missing plugin button is clicked.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::createWebViewWithOptions):
(WTR::TestController::unavailablePluginButtonClicked):
(WTR):
* WebKitTestRunner/TestController.h:
(TestController):

LayoutTests:

Unskip plugins/clicking-missing-plugin-fires-delegate.html for
WK2 now that WebKitTestRunner is dumping the expected text when
the missing plugin button is clicked.

* platform/efl-wk2/TestExpectations:
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/124092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138608 268f45cc-cd09-0410-ab3c-d52691b4dbfc